# agentforge

./: .gitignore  .gitleaks.toml  README.md  TODO.md  TODO_v2.md  pyproject.toml  pyrightconfig.json
agentforge/: __init__.py  __main__.py
agentforge/cli/: __init__.py  add_cmd.py  app.py  flags.py  gh_cmd.py  init_cmd.py  new_cmd.py  validate_cmd.py
agentforge/engine/: __init__.py  filters.py  renderer.py
agentforge/github/: __init__.py  gh.py
agentforge/prompts/: __init__.py  questions.py  wizard.py
agentforge/schema/: __init__.py  loader.py  models.py  project.schema.json
agentforge/templates/: .env.example.j2  .gitleaks.toml.j2  .secretscanignore.j2  Dockerfile.j2  Makefile.j2  README.md.j2  __init__.py.j2  agent.py.j2  agents_init.py.j2  alembic.ini.j2  answer_node.py.j2  auth.py.j2  base_agent.py.j2  docker-compose.yml.j2  env.j2  external_sse.py.j2  feedback_node.py.j2  internal_mysql.py.j2  logging.py.j2  logging_middleware.py.j2  logging_structlog.py.j2  main.py.j2  mcp_client.py.j2  mcp_server.py.j2  precommit_config.yaml.j2  project.yaml.j2  provider_registry.py.j2  providers.yaml.j2  pyproject.toml.j2  pyrightconfig.json.j2  query_router_node.py.j2  registry.py.j2  requirements.txt.j2  sanitizer.py.j2  state.py.j2  store_backend.py.j2  supervisor_node.py.j2  test_structlog_setup.py.j2  tracing.py.j2  validation_node.py.j2  (+1 more)
agentforge/templates/alembic/: env.py.j2  script.py.mako.j2
agentforge/templates/benchmarks/: base_mcp_mocks.json.j2  conftest.py.j2  datasets.py.j2  generators.py.j2  report_plugin.py.j2  runner.py.j2  test_graph_agent.py.j2  trigger_command.py.j2  utils.py.j2
agentforge/templates/ci/: github_ci.yml.j2
agentforge/templates/config/: memory_settings.py.j2  settings.py.j2
agentforge/templates/graph/: postgres_with_saver.py.j2
agentforge/templates/middleware/: account_gate.py.j2  permission_gate.py.j2
agentforge/templates/patterns/_entry/: direct_entry.py.j2  passthrough_node.py.j2
agentforge/templates/patterns/fanout/: orchestrator_node.py.j2  reducer_node.py.j2  workflow.py.j2
agentforge/templates/patterns/planner/: _package_init.py.j2  _precheck.py.j2  composer_node.py.j2  plan_and_run_node.py.j2  plan_precheck_node.py.j2  solver_node.py.j2  validator_node.py.j2  workflow.py.j2
agentforge/templates/patterns/react/: agent.py.j2  graph_agent.py.j2
agentforge/templates/patterns/workflow/: human_review_node.py.j2  workflow.py.j2
agentforge/templates/security/: auth_init.py.j2  dtos.py.j2  jwt.py.j2  jwt_settings.py.j2  prompt_secret_scanner.py.j2
agentforge/templates/services/: bigquery_rest_client.py.j2  credential_provider.py.j2  platform_db.py.j2
agentforge/templates/tools/: agent_tool.py.j2  http_tool.py.j2  tool_registry.py.j2
agentforge/utils/: git.py
agentforge/writer/: __init__.py  scaffold.py
docs/: flag_cheatsheet.md  migration_v1_to_v2.md
examples/: assistant.yaml  campaign_health.yaml  copilot.yaml  fanout.yaml  planner.yaml  project.full.yaml  workflow.yaml
scripts/: export_schema.py
test_env/: pyvenv.cfg
tests/: __init__.py  test_byte_identity_v1.py  test_campaign_health_v2.py  test_docs.py  test_github.py  test_integration.py  test_jwt_structlog_binding.py  test_loader.py  test_multitenancy_templates.py  test_permission_gate_template.py  test_prompt_secret_scanner_template.py  test_provider_registry_template.py  test_pyrightconfig_template.py  test_render_per_pattern.py  test_renderer.py  test_router_provider.py  test_scaffold.py  test_scaffold_import.py  test_scaffold_snapshot.py  test_schema.py  test_storage_macro_template.py  test_stores_settings_field.py  test_structlog_template.py  test_wizard.py
tests/cli/: test_flags.py
tests/e2e/: conftest.py  test_full_scaffold.py  test_v2_patterns.py
tests/engine/: test_alembic_render.py  test_benchmarks_render.py  test_checkpointer_render.py  test_ci_render.py  test_entry_render.py  test_fanout_render.py  test_jwt_render.py  test_makefile_render.py  test_mcp_render.py  test_planner_render.py  test_precommit_render.py  test_react_render.py  test_renderer_dispatch.py  test_tool_kinds_render.py  test_workflow_render.py
tests/examples/: test_examples.py
tests/fixtures/: all_flags_on.yaml  campaign_health_v2.yaml  copilot_v2.yaml  full.yaml  minimal.yaml
tests/fixtures/snapshots/: conftest.py
tests/fixtures/snapshots/default_scaffold/: .env.example  .gitignore  .gitleaks.toml  .secretscanignore  Makefile  README.md  requirements.txt
tests/fixtures/snapshots/default_scaffold/backend/: main.py
tests/fixtures/snapshots/default_scaffold/backend/agents/: analytics_agent.py  base_agent.py  registry.py  sql_agent.py
tests/fixtures/snapshots/default_scaffold/backend/graph/: workflow.py
tests/fixtures/snapshots/default_scaffold/backend/observability/: logging.py  tracing.py
tests/fixtures/snapshots/default_scaffold/backend/security/: auth.py
tests/fixtures/snapshots/default_scaffold/backend/services/: mcp_client.py
tests/fixtures/snapshots/project_full/: .env.example  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  requirements.txt
tests/fixtures/snapshots/project_full/.github/workflows/: ci.yml
tests/fixtures/snapshots/project_full/backend/: main.py  mcp_server.py
tests/fixtures/snapshots/project_full/backend/agents/: __init__.py  analytics_agent.py  base_agent.py  data_agent.py  registry.py
tests/fixtures/snapshots/project_full/backend/config/: memory_settings.py
tests/fixtures/snapshots/project_full/backend/graph/: checkpointer.py  workflow.py
tests/prompts/: test_wizard_steps.py
tests/schema/: test_schema_export_drift.py  test_schema_v2_compat.py  test_security_validators.py  test_testing_validators.py  test_workflow_validators.py
tests/snapshots/per_pattern/assistant/: manifest.json
tests/snapshots/per_pattern/campaign_health/: manifest.json
tests/snapshots/per_pattern/copilot/: manifest.json
tests/snapshots/per_pattern/fanout/: manifest.json
tests/snapshots/per_pattern/planner/: manifest.json
tests/snapshots/per_pattern/workflow/: manifest.json
tests/utils/: test_git.py
(+31 files in other folders)
