# pyproject.toml — agentforge package

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentforge"
version = "0.1.0"
description = "CLI tool for scaffolding production-grade agentic Python projects"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Indika Maligaspe", email = "indika@code4zeero.com"}
]
keywords = ["agents", "langchain", "langgraph", "scaffolding", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "typer[all]>=0.12",
  "questionary>=2.0",
  "pydantic>=2.7",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "rich>=13.7",
]

[project.scripts]
agentforge = "src.agentforge.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentforge"]

[tool.hatch.build.targets.wheel.force-include]
"src/agentforge/templates" = "src/agentforge/templates"

[tool.hatch.envs.default]
dependencies = [
  "pytest>=8",
  "pytest-cov",
  "ruff",
  "mypy",
]

[tool.hatch.envs.default.scripts]
test   = "pytest tests/ -v --cov=agentforge --cov-report=term-missing"
lint   = "ruff check agentforge/"
typecheck = "mypy agentforge --ignore-missing-imports"
fmt    = "ruff format agentforge/"

[tool.ruff]
line-length = 100
target-version = "py311"