# pyproject.toml — agentforge package

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentforge"
version = "0.1.0"
description = "CLI tool for scaffolding production-grade agentic Python projects"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Indika Maligaspe", email = "indika@code4zeero.com"}
]
keywords = ["agents", "langchain", "langgraph", "scaffolding", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "typer[all]>=0.12",
  "questionary>=2.0",
  "pydantic>=2.7",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "rich>=13.7",
]

[project.optional-dependencies]
# Runtime dependencies of scaffolded projects. Installed only to let
# agentforge's own test suite actually import every generated module
# and verify the scaffolded project works end-to-end.
scaffold-test = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "python-dotenv>=1.0.0",
  "langchain>=0.1.0",
  "langchain-core>=0.1.0",
  "langchain-openai>=0.1.0",
  "langchain-anthropic>=0.1.0,<0.4.0",
  "langgraph>=0.0.20",
  "openai>=1.12.0",
  "structlog>=24.1.0",
  "python-json-logger>=2.0.7",
  "python-multipart>=0.0.7",
  "cryptography>=42.0.0",
  "httpx>=0.26.0",
  "asyncpg>=0.29.0",
  "langfuse>=2.0.0",
]

[project.scripts]
agentforge = "agentforge.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["agentforge"]

[tool.hatch.build.targets.wheel.force-include]
"agentforge/templates" = "agentforge/templates"

[tool.hatch.envs.default]
dependencies = [
  "pytest>=8",
  "pytest-cov",
  "ruff",
  "mypy",
]

[tool.hatch.envs.default.scripts]
test   = "pytest tests/ -v --cov=agentforge --cov-report=term-missing"
lint   = "ruff check agentforge/"
typecheck = "mypy agentforge --ignore-missing-imports"
fmt    = "ruff format agentforge/"

[tool.ruff]
line-length = 100
target-version = "py311"